# yousef-shtiwe-worm-v2

./: .env.example  .gitignore  .gitmodules  .mailmap  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  RELEASE_v0.7.0.md  RELEASE_v0.8.0.md  RELEASE_v0.9.0.md  SECURITY.md  THIRD-PARTY-LICENSES.md  auth.py  auth_commands.py  auth_yousef.py  callbacks.py  cli-config.yaml.example  cli.py  clipboard.py  commands.py  config.py  constraints-termux.txt  debug.py  default_soul.py  docker-compose.dev.yml  docker-compose.yml  doctor.py  flake.nix  main.py  mcp_serve.py  mini_swe_runner.py  (+48 more)
.github/: PULL_REQUEST_TEMPLATE.md
.plans/: openai-api-server.md  streaming-support.md
acp_adapter/: __init__.py  auth.py  entry.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: anthropic_adapter.py  auxiliary_client.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  display.py  error_classifier.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  prompt_builder.py  rate_limit_tracker.py  redact.py  run_agent.py  skill_commands.py  skill_utils.py  smart_model_routing.py  title_generator.py  worm_learning.py
agentic/: Dockerfile  SOUL.md  api.py  chat_persistence.py  docker-compose.yml  logging_config.py  model_providers.py  orchestrator.py  project_settings.py  requirements-kb.txt  requirements.txt  state.py  tools.py  utils.py  websocket_api.py
cron/: __init__.py  jobs.py  scheduler.py
datagen-config-examples/: example_browser_tasks.jsonl  run_browser_tasks.sh  web_research.yaml
(+1542 files in other folders)
