[project]
name = "shadow-agent"
version = "1.0.0"
description = "SHADOW Agent - The Supreme Self-Improving Autonomous Entity"
dependencies = [
    "fire",
    "requests",
    "nexttoken",
    "prompt_toolkit",
    "rich",
    "pydantic>=2.0",
    "python-dotenv",
    "aiohttp",
    "croniter"
]

[project.optional-dependencies]
all = [
    "discord.py",
    "python-telegram-bot",
    "firecrawl-py",
    "edge-tts",
    "fal-client"
]

[project.scripts]
shadow = "shadow_cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
