[project]
name = "yousef-shtiwe-worm-v2"
version = "48.0.0"
description = "The YOUSEF SHTIWE Sovereign Offensive Agent."
dependencies = [
    "requests",
    "rich",
    "python-dotenv",
    "PyYAML",
    "httpx",
]

[project.scripts]
yousef-shtiwe = "yousef_shtiwe_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yousef_shtiwe_cli*", "shtiwe_modules*", "agent*", "yousef_shtiwe_core*"]
